poornima-site.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poornima-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poornima-site
  template:
    metadata:
      labels:
        app: poornima-site
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: poornima-html
---
apiVersion: v1
kind: Service
metadata:
  name: poornima-service
spec:
  selector:
    app: poornima-site
  ports:
    - port: 80
      targetPort: 80
