service.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 80       # Port the service listens on
      targetPort: 80 # Port on the pod
  type: NodePort     # Exposes the service on each Node's IP
