ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: laxmangodiportfolio.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-service  # Your Service
            port:
              number: 80
  - host: poornimalaxmangodi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: poornima-service   # Her Service
            port:
              number: 80
